# flask-babel

./: .buildinfo  .bumpversion.cfg  .gitignore  .pre-commit-config.yaml  .travis.yml  CHANGELOG  CHANGES.rst  LICENSE  MANIFEST.in  Makefile  README  README.md  flask_babel.py  genindex.html  git_upload.sh  index.html  objects.inv  py-modindex.html  pyproject.toml  pytest.ini  search.html  searchindex.js  setup.cfg  setup.py  tests.py  tox.ini
.github/: FUNDING.yml
.github/workflows/: release.yml  test.yml
.infrastructure/: install_icu.sh
_modules/: flask_babel.html  index.html
docs/: Makefile  conf.py  index.rst  make.bat
flask_babel/: __init__.py  _compat.py  cli.py  speaklater.py
flask_babel2/: __init__.py  _compat.py  speaklater.py
flask_babelex/: __init__.py  _compat.py
flask_icu/: __init__.py
flaskext/: babel.py
tests/: messages.pot  test_app_factory.py  test_date_formatting.py  test_force_locale.py  test_gettext.py  test_integration.py  test_multiple_apps.py  test_number_formatting.py  tests.py
tests/renamed_translations/de/LC_MESSAGES/: myapp.mo  myapp.po
tests/translations/: messages.pot  test.pot
tests/translations/de/: messages.json
tests/translations/de/LC_MESSAGES/: custom-domain.mo  custom-domain.po  messages.mo  messages.po  test.mo  test.po
tests/translations/en/: messages.json
tests/translations/ja/LC_MESSAGES/: messages.mo  messages.po
tests/translations/xx/LC_MESSAGES/: messages.mo  messages.po
tests/translations_different_domain/: myapp.pot
tests/translations_different_domain/de/LC_MESSAGES/: myapp.mo  myapp.po
