[tool.poetry]
name = "flask-babel"
version = "3.0.1"
description = "Adds i18n/l10n support fo Flask applications."
authors = ["Armin Ronacher"]
maintainers = ["Tyler Kennedy <tk@tkte.ch>"]
license = "BSD-3-Clause"
readme = "README.md"
classifiers = [
    'Development Status :: 5 - Production/Stable',
    'Environment :: Web Environment',
    'Intended Audience :: Developers',
    'License :: OSI Approved :: BSD License',
    'Operating System :: OS Independent',
    'Programming Language :: Python :: 3.7',
    'Programming Language :: Python :: 3.8',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
    'Programming Language :: Python :: Implementation :: CPython',
    'Programming Language :: Python :: Implementation :: PyPy',
    'Topic :: Internet :: WWW/HTTP :: Dynamic Content',
    'Topic :: Software Development :: Libraries :: Python Modules'
]
include = [
    "CHANGELOG",
    "README.md",
    "LICENSE"
]

[tool.poetry.dependencies]
python = "^3.7"
pytz = "^2022.7"
Flask = "^2.0.0"
Babel = "^2.11.0"
Jinja2 = "^3.1.2"

[tool.poetry.dev-dependencies]
pytest = "^7.2.0"
pytest-mock = "^3.10.0"
bumpversion = "^0.6.0"
ghp-import = "^2.1.0"
Sphinx = "^5.3.0"
coverage = "^6.4.4"
pytest-cov = "^3.0.0"
furo = "^2022.12.7"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
